--- a/index.html
+++ b/index.html
@@ -6804,7 +6804,7 @@ Click the help icon above to learn more.
 															<div class="elementor-widget-container">
 																<img loading="lazy" decoding="async" width="6278"
 																	height="3456"
-																	src="../amarbusinesspark.com/assets/Images/19.png"
+																	src="assets/Images/19.png"
 																	class="elementor-animation-grow attachment-full size-full wp-image-4613"
 																	alt="Your Image Description" />
 
@@ -6815,7 +6815,7 @@ Click the help icon above to learn more.
 															data-widget_type="image.default">
 															<img loading="lazy" decoding="async" width="6278"
 																height="3456"
-																src="../amarbusinesspark.com/assets/Images/20.png"
+																src="assets/Images/20.png"
 																class="elementor-animation-grow attachment-full size-full wp-image-4613"
 																alt="Your Image Description" />
 
@@ -6825,7 +6825,7 @@ Click the help icon above to learn more.
 															data-widget_type="image.default">
 															<img loading="lazy" decoding="async" width="6278"
 																height="3456"
-																src="../amarbusinesspark.com/assets/Images/21.png"
+																src="assets/Images/21.png"
 																class="elementor-animation-grow attachment-full size-full wp-image-4613"
 																alt="Your Image Description" />
 														</div>
@@ -6834,7 +6834,7 @@ Click the help icon above to learn more.
 															data-widget_type="image.default">
 															<img loading="lazy" decoding="async" width="6278"
 																height="3456"
-																src="../amarbusinesspark.com/assets/Images/22.png"
+																src="assets/Images/22.png"
 																class="elementor-animation-grow attachment-full size-full wp-image-4613"
 																alt="Your Image Description" />
 														</div>
