--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="jobjhXwAt-3cc_kWgNLWSTB20F-8QpbJ3pdb_A1SCQ8" />
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<title>Amar Sadanand Tech Park</title>
+	<title>Amar Sadanand Tech Park – Modern Office Spaces in Baner, Pune</title>
 	<meta name='robots' content='max-image-preview:large' />
+	<meta name="description" content="Amar Sadanand Tech Park in Baner, Pune, features state-of-the-art office spaces with top-tier amenities such as 24/7 security, reliable power backup, and ample parking. Offering both furnished and unfurnished office options, it caters to diverse business needs. The tech park is strategically located, providing easy access to major transport hubs and business centers, making it a prime choice for companies seeking a dynamic work environment.">
 	<link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
 	<link rel="shortcut icon" type="image/x-icon" href="./assets/images/amar favicon.png" />
 	<link rel="alternate" type="application/rss+xml"  &raquo; Feed href="feed/index.html" />
