--- a/index.html
+++ b/index.html
@@ -4072,7 +4072,7 @@ Click the help icon above to learn more.
 							<div class="elementor-widget-container">
 								<div class="elementor-button-wrapper">
 									<a class="elementor-button elementor-button-link elementor-size-sm"
-										href="tel:%2081499%2077661">
+										href="tel:%2095117%2057227">
 										<span class="elementor-button-content-wrapper">
 											<span class="elementor-button-text">CALL NOW</span>
 										</span>
@@ -4127,7 +4127,7 @@ Click the help icon above to learn more.
 							border-top-right-radius: 10px; 
 							font-size: 16px; 
 							text-align: center;">
-					Amar Business Zone
+					Amar Sadanand Tech Park
 					<div style="font-size: 12px; z-index: 100;
 								color: #C2C2C2; 
 								margin-top: 5px;">
@@ -4197,7 +4197,7 @@ Click the help icon above to learn more.
 				document.getElementById('send-button').addEventListener('click', function () {
 					var message = document.getElementById('chat-input').value;
 					if (message.trim() !== "") {
-						var whatsappUrl = "https://wa.me/1111111111?text=" + encodeURIComponent(message);
+						var whatsappUrl = "https://wa.me/9511757227?text=" + encodeURIComponent(message);
 						document.getElementById('user-message').textContent = message;
 						window.open(whatsappUrl, '_blank');
 					}
@@ -8086,7 +8086,7 @@ Click the help icon above to learn more.
 										<li class="elementor-icon-list-item">
 											<a href="tel:%2081499%2077661">
 
-												<span class="elementor-icon-list-text">+91 8149977661</span>
+												<span class="elementor-icon-list-text">+91 9511757227</span>
 											</a>
 										</li>
 										<li class="elementor-icon-list-item">
